2001-06-19 John R. Jackson <jrj@purdue.edu>

	* server-src/amtape.c: Document "slot advance" in the help output.

2001-06-19 John R. Jackson <jrj@purdue.edu>

	* server-src/amindexd.c: Minor gethostbyaddr() argument change to be
	  consistent with other Amanda usage.

2001-06-19 John R. Jackson <jrj@purdue.edu>

	* server-src/amverify.sh.in: Better cross platform tar detection.

2001-06-19 John R. Jackson <jrj@purdue.edu>

	* server-src/amverify.sh.in: More of the vrestore vs. 'b' flag change.

2001-06-19 John R. Jackson <jrj@purdue.edu>

	* recover-src/amrecover.c: Add more debugging to guess_disk()
	  function to better track how the disk is determined from the
	  current working directory.  Report current working directory in
	  error message.  Change "Trying" to "Trying disk" to distinguish
	  this from host attempts.
	* recover-src/set_commands.c: Remove redundant amfree() call.  Remove
	  redundant "OISD /" exchange.  Change "Trying" to "Trying host" to
	  distinguish this from disk attempts.

2001-06-19 Thomas Hepper <th@ant.han.de>
	* changer-src/chg-scsi.c: Made clean_slot a global var. Removed
	the label db update stuff from the COM_SLOT part (moved to unload
	in scsi-changer-driver.c)
	* changer-src/scsi-changer-driver.c: Do an unload if the tape is
	loaded in the Inventory function. Added an marker to avoid recursion
	in Inventroy function. Added label db check in unload function and
	call Inventroy if it indicates an out of sync db
	
2001-06-18 John R. Jackson <jrj@purdue.edu>

	* recover-src/extract_list.c: Do not pass a 'b' (blocking) factor
	  flag to vrestore.  Some versions do not like it.

2001-06-18 John R. Jackson <jrj@purdue.edu>

	* common-src/dgram.c: Use a sin_addr arg to inet_ntoa() like all the
	  other Amanda code.
	* common-src/stream.c: Ditto.

2001-06-18 John R. Jackson <jrj@purdue.edu>

	* changer-src/chg-manual.sh.in: Add yet another online regex.  Found
	  by George Herson <gherson@snet.net>.
